--- a/runner/docker-compose/docker-compose-kafka-java-choreography.yml
+++ b/runner/docker-compose/docker-compose-kafka-java-choreography.yml
@@ -1,9 +1,9 @@
-version: "2"
+version: "3"
 
 # Kafka like https://docs.confluent.io/current/installation/docker/docs/installation/single-node-client.html
 services:
   zookeeper:
-    image: "confluentinc/cp-zookeeper:latest"
+    image: "bitnami/zookeeper:latest"
     hostname: zookeeper
     networks:
       - flowing
@@ -11,9 +11,10 @@ services:
       - 2181:2181
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      ALLOW_ANONYMOUS_LOGIN: yes
 
   kafka:
-    image: "confluentinc/cp-kafka:latest"
+    image: "bitnami/kafka:latest"
     hostname: kafka
     networks:
       - flowing
@@ -22,10 +23,15 @@ services:
       - 29092:29092
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      ALLOW_PLAINTEXT_LISTENER: yes
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_LISTENERS: PLAINTEXT://:9092,PLAINTEXT_HOST://:29092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    depends_on:
+      - zookeeper
 
 
   checkout:
