--- a/kafka/java/order-zeebe/pom.xml
+++ b/kafka/java/order-zeebe/pom.xml
@@ -8,7 +8,7 @@
 		<maven.compiler.release>8</maven.compiler.release>
 		<spring.boot.version>2.3.12.RELEASE</spring.boot.version>
 		<spring-cloud-stream.version>3.0.13.RELEASE</spring-cloud-stream.version>
-		<zeebe.version>1.2.1</zeebe.version>
+		<zeebe.version>1.3.4</zeebe.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -55,6 +55,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.200</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.1</version>
 		</dependency>
 	</dependencies>
 	<build>
