--- a/kafka/java/order-zeebe/src/main/resources/application.properties
+++ b/kafka/java/order-zeebe/src/main/resources/application.properties
@@ -3,10 +3,13 @@ spring.application.name=order-zeebe
 # Self-managed local Zeebe
 # zeebe.gatewayAddress=localhost:26500
 
+zeebe.client.broker.gatewayAddress=127.0.0.1:26500
+zeebe.client.security.plaintext=true
+
 # Camunda Cloud Connection
-zeebe.client.cloud.clusterId=0cf85709-ce5f-4e5e-a11e-b0b3eaa85033
-zeebe.client.cloud.clientId=A6VtjBrc-MB5V_iEIrcSlAaAhlPBYmL8
-zeebe.client.cloud.clientSecret=9hbOuv0vDDiPfn.s2Ku611.UMA9~pmEXah-PWvOlRemo7jqi9QUDUsys0XGv3xzp
+#zeebe.client.cloud.clusterId=bla
+#zeebe.client.cloud.clientId=blub
+#zeebe.client.cloud.clientSecret=meh
 
 # Kafka Config
 spring.cloud.stream.bindings.output.destination=flowing-retail
