--- a/kafka/java/order-camunda/pom.xml
+++ b/kafka/java/order-camunda/pom.xml
@@ -8,13 +8,13 @@
 		<maven.compiler.release>8</maven.compiler.release>
 		<spring.boot.version>2.6.7</spring.boot.version>
 		<spring.kafka.version>2.8.5</spring.kafka.version>
-		<camunda.version>7.12.0</camunda.version>
+		<camunda.version>7.18.0</camunda.version>
 		<!-- 
 		Adjust if you want to use Enterprise Edition of Camunda:
 		<camunda.version>7.12.0-ee</camunda.version>
 		Make sure you also switch to the ee webapp dependency below
 		-->
-		<camunda.spring.boot.version>3.4.1</camunda.spring.boot.version>
+		<camunda.spring.boot.version>7.18.0</camunda.spring.boot.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -114,7 +114,19 @@
 			<artifactId>camunda-bpm-process-test-coverage</artifactId>
 			<version>0.3.0</version>
 			<scope>test</scope>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>2.2.3</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -140,7 +152,7 @@
                 <configuration>                         
     				  <mainClass>io.flowing.retail.order.OrderApplication</mainClass>
                 </configuration>
-             </plugin> 
+             </plugin>
 			 <plugin>
 	            <groupId>org.springframework.boot</groupId>
 	            <artifactId>spring-boot-maven-plugin</artifactId>
