--- a/kafka/java/order-camunda/src/main/resources/application.properties
+++ b/kafka/java/order-camunda/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=order-camunda
 
 spring.datasource.url=jdbc:h2:./camunda-db-order;DB_CLOSE_ON_EXIT=false
+spring.jpa.hibernate.ddl-auto = create
 
 flowing-retail.topic-name=flowing-retail
 spring.kafka.bootstrap-servers=kafka:9092
