--- a/kafka/java/payment-camunda/pom.xml
+++ b/kafka/java/payment-camunda/pom.xml
@@ -6,16 +6,14 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<maven.compiler.release>8</maven.compiler.release>
-		<spring.boot.version>2.2.5.RELEASE</spring.boot.version>
-		<spring-cloud-stream.version>Horsham.RELEASE</spring-cloud-stream.version>
-		
-		<camunda.version>7.12.0</camunda.version>
+		<spring.boot.version>2.6.7</spring.boot.version>
+		<camunda.version>7.18.0</camunda.version>
 		<!-- 
 		Adjust if you want to use Enterprise Edition of Camunda:
 		<camunda.version>7.12.3-ee</camunda.version>
 		Make sure you also switch to the ee webapp dependency below
 		-->
-		<camunda.spring.boot.version>3.4.1</camunda.spring.boot.version>
+		<camunda.spring.boot.version>7.18.0</camunda.spring.boot.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -33,23 +31,12 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-stream-dependencies</artifactId>
-				<version>${spring-cloud-stream.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>			
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.camunda.bpm.springboot</groupId>
@@ -75,6 +62,12 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>2.8.5</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -92,7 +85,7 @@
                 <configuration>                         
     				  <mainClass>io.flowing.retail.payment.PaymentApplication</mainClass>
                 </configuration>
-             </plugin>      
+             </plugin>
 			 <plugin>
 	            <groupId>org.springframework.boot</groupId>
 	            <artifactId>spring-boot-maven-plugin</artifactId>
@@ -105,9 +98,9 @@
 			    </executions>
 	        </plugin>
 			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-compiler-plugin</artifactId>
-			    <version>3.8.1</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 			</plugin>
     	</plugins>
     </build>
