--- a/kafka/java/payment-camunda/src/main/resources/application.properties
+++ b/kafka/java/payment-camunda/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:h2:./camunda-db-payment;DB_CLOSE_ON_EXIT=false
-
+spring.jpa.hibernate.ddl-auto = create
 server.port = 8093
 
 camunda.bpm.admin-user.id=demo
