Fixes for lab 11 including Zeebe-order (self-hosted)

--- a/kafka/java/order-zeebe/src/main/resources/application.properties
+++ b/kafka/java/order-zeebe/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=order-zeebe
 
 # Self-managed local Zeebe
-zeebe.client.broker.gateway-address=127.0.0.1:26500
+zeebe.client.broker.gateway-address=zeebe:26500
 zeebe.client.security.plaintext=true
 
 # Camunda Cloud Connection
