--- a/runner/docker-compose/docker-compose-kafka-java-order-zeebe.yml
+++ b/runner/docker-compose/docker-compose-kafka-java-order-zeebe.yml
@@ -33,51 +33,78 @@ services:
       - zookeeper
 
   checkout:
-    image: flowingretail/kafka-java-checkout
+    build:
+      context: ../../kafka/java/checkout
+      dockerfile: Dockerfile
     networks:
       - flowing
     ports:
       - "8091:8091"
     depends_on:
       - kafka
+    environment:
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
-#  order:
-#    image: flowingretail/kafka-java-order-zeebe
-#    networks:
-#      - flowing
-#    depends_on:
-#      - kafka
-#      - zeebe
+  order:
+    build:
+      context: ../../kafka/java/order-zeebe
+      dockerfile: Dockerfile
+    networks:
+      - flowing
+    ports:
+      - "8092:8092"
+    depends_on:
+      - kafka
+    environment:
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
   payment:
-    image: flowingretail/kafka-java-payment
+    build:
+      context: ../../kafka/java/payment-camunda
+      dockerfile: Dockerfile
     networks:
       - flowing
+    ports:
+      - "8093:8093"
     depends_on:
       - kafka
+    environment:
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
   inventory:
-    image: flowingretail/kafka-java-inventory
+    build:
+      context: ../../kafka/java/inventory
+      dockerfile: Dockerfile
     networks:
       - flowing
     depends_on:
       - kafka
+    environment:
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
   shipping:
-    image: flowingretail/kafka-java-shipping
+    build:
+      context: ../../kafka/java/shipping
+      dockerfile: Dockerfile
     networks:
       - flowing
     depends_on:
       - kafka
+    environment:
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
   monitor:
-    image: flowingretail/kafka-java-monitor
+    build:
+      context: ../../kafka/java/monitor
+      dockerfile: Dockerfile
     networks:
       - flowing
     ports:
       - "8095:8095"
     depends_on:
       - kafka
+    environment:
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
   docs:
     image: flowingretail/docs
@@ -85,6 +112,8 @@ services:
       - flowing
     ports:
       - "8099:80"
+    environment:
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
   zeebe:
     image: camunda/zeebe:${CAMUNDA_CLOUD_VERSION:-1.3.5}
