--- a/kafka/java/order-zeebe/pom.xml
+++ b/kafka/java/order-zeebe/pom.xml
@@ -6,27 +6,21 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<maven.compiler.release>8</maven.compiler.release>
-		<spring.boot.version>2.3.12.RELEASE</spring.boot.version>
-		<spring-cloud-stream.version>3.0.13.RELEASE</spring-cloud-stream.version>
+		<spring.boot.version>2.6.7</spring.boot.version>
+		<spring.kafka.version>2.8.5</spring.kafka.version>
 		<zeebe.version>1.3.4</zeebe.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
-			<version>${spring-cloud-stream.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-web</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
 		<dependency>
 			<!-- required to add JSR310 time formats for Jackson to ObjectMapper -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-json</artifactId>
 			<version>${spring.boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>${spring.kafka.version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>io.camunda</groupId>
@@ -68,7 +62,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>io.flowing.retail.kafka.order.OrderFulfillmentApplication</mainClass>
+					<mainClass>io.flowing.retail.order.OrderApplication</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
