--- a/runner/docker-compose/docker-compose-kafka-java-order-zeebe.yml
+++ b/runner/docker-compose/docker-compose-kafka-java-order-zeebe.yml
@@ -116,12 +116,14 @@ services:
       - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
   zeebe:
-    image: camunda/zeebe:${CAMUNDA_CLOUD_VERSION:-1.3.5}
+    image: camunda/zeebe:${CAMUNDA_PLATFORM_VERSION:-8.0.2}
     hostname: zeebe
     environment:
       - ZEEBE_BROKER_EXPORTERS_ELASTICSEARCH_CLASSNAME=io.camunda.zeebe.exporter.ElasticsearchExporter
       - ZEEBE_BROKER_EXPORTERS_ELASTICSEARCH_ARGS_URL=http://elasticsearch:9200
       - ZEEBE_BROKER_EXPORTERS_ELASTICSEARCH_ARGS_BULK_SIZE=1
+      - ZEEBE_BROKER_DATA_DISKUSAGECOMMANDWATERMARK=0.998
+      - ZEEBE_BROKER_DATA_DISKUSAGEREPLICATIONWATERMARK=0.999
     networks:
       - flowing
     ports:
@@ -129,12 +131,12 @@ services:
       - "9600:9600"
     volumes:
       - zeebe_data:/usr/local/zeebe/data
-      - ./zeebe.cfg.toml:/usr/local/zeebe/conf/zeebe.cfg.toml
     depends_on:
       - elasticsearch
 
   operate:
-    image: camunda/operate:${CAMUNDA_CLOUD_VERSION:-1.3.5}
+    image: camunda/operate:${CAMUNDA_PLATFORM_VERSION:-8.0.2}
+    container_name: operate
     environment:
       - CAMUNDA_OPERATE_ZEEBE_GATEWAYADDRESS=zeebe:26500
       - CAMUNDA_OPERATE_ELASTICSEARCH_URL=http://elasticsearch:9200
@@ -143,15 +145,21 @@ services:
       - "8080:8080"
     networks:
       - flowing
+    depends_on:
+      - zeebe
+      - elasticsearch
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTIC_VERSION:-7.16.1}
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTIC_VERSION:-7.17.0}
+    container_name: elasticsearch
     ports:
       - "9200:9200"
+      - "9300:9300"
     environment:
       - discovery.type=single-node
       - cluster.name=elasticsearch
       - bootstrap.memory_lock=true
+      - cluster.routing.allocation.disk.threshold_enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
