--- a/runner/docker-compose/docker-compose-kafka-java-orchestrated.yml
+++ b/runner/docker-compose/docker-compose-kafka-java-orchestrated.yml
@@ -153,11 +153,11 @@ services:
         soft: -1
         hard: -1
     restart: always
-    healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://localhost:9200/_cat/health | grep -q green" ]
-      interval: 30s
-      timeout: 5s
-      retries: 3
+#    healthcheck:
+#      test: [ "CMD-SHELL", "curl -f http://localhost:9200/_cat/health | grep -q green" ]
+#      interval: 30s
+#      timeout: 5s
+#      retries: 3
     volumes:
       - elastic:/usr/share/elasticsearch/data
     networks:
