Notification Service add. Simulates Email creation upon PaymentReceivedEvent. Not Working yet.

--- a/runner/docker-compose/docker-compose-kafka-java-choreography.yml
+++ b/runner/docker-compose/docker-compose-kafka-java-choreography.yml
@@ -71,6 +71,17 @@ services:
     environment:
       - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
+  notification:
+    build:
+      context: ../../kafka/java/choreography-alternative/notification
+      dockerfile: Dockerfile
+    networks:
+      - flowing
+    depends_on:
+      - kafka
+    environment:
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+
   shipping:
     build:
       context: ../../kafka/java/choreography-alternative/shipping
