add notification service to maven build, begin working out logging to docker container

--- a/kafka/java/choreography-alternative/pom.xml
+++ b/kafka/java/choreography-alternative/pom.xml
@@ -11,6 +11,7 @@
 		<module>payment</module>
 		<module>inventory</module>
 		<module>shipping</module>
+		<module>notification</module>
 		<!--
 		<module>zeebe-monitor</module>
 		-->
