--- a/kafka/java/checkout/pom.xml
+++ b/kafka/java/checkout/pom.xml
@@ -25,7 +25,13 @@
 			<artifactId>spring-kafka</artifactId>
 			<version>3.1.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.9</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
