--- a/kafka/java/inventory/pom.xml
+++ b/kafka/java/inventory/pom.xml
@@ -7,19 +7,29 @@
 	<properties>
 		<maven.compiler.release>8</maven.compiler.release>
 		<spring.boot.version>3.2.2</spring.boot.version>
-		<spring.kafka.version>3.1.2</spring.kafka.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<!-- required to add JSR310 time formats for Jackson to ObjectMapper -->
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-json</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring.boot.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
-			<version>${spring.kafka.version}</version>
+			<version>3.1.2</version>
+		</dependency>
+		<dependency>
+			<!-- required to add JSR310 time formats for Jackson to ObjectMapper -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-json</artifactId>
+			<version>3.2.2</version>
 		</dependency>
 	</dependencies>
 	<build>
