--- a/kafka/java/shipping/src/main/resources/application.properties
+++ b/kafka/java/shipping/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-spring.application.name=shipping
-
-# Kafka
+flowing-retail.topic-name=flowing-retail
 spring.kafka.bootstrap-servers=kafka:9092
-spring.kafka.consumer.auto-offset-reset=earliest
