--- a/kafka/java/qrInvoice/pom.xml
+++ b/kafka/java/qrInvoice/pom.xml
@@ -12,11 +12,6 @@
     <groupId>org.example</groupId>
     <artifactId>flowing-retail-kafka-qrInvoice</artifactId>
 
-    <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -80,6 +75,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
