--- a/kafka/java/booking/pom.xml
+++ b/kafka/java/booking/pom.xml
@@ -61,6 +61,10 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
 
 	</dependencies>
 	<build>
