--- a/kafka/java/reporting/src/main/resources/application.properties
+++ b/kafka/java/reporting/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 
 # Kafka
 flowing-retail.topic-name=flowing-retail
-spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.consumer.auto-offset-reset=earliest
 logging.file.path=logs
+acks=all
+retries=0
+key.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
+value.serializer=org.apache.kafka.common.serialization.StringSerializer
+log4j.logger.org.apache.kafka=DEBUG
 
 # SQL
 spring.datasource.url=jdbc:mysql://7l2ot.myd.infomaniak.com:3306/7l2ot_nextBookingsPOS?useSSL=false
