--- a/kafka/java/accounting/pom.xml
+++ b/kafka/java/accounting/pom.xml
@@ -71,6 +71,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
