--- a/runner/docker-compose/docker-compose-stream-only.yml
+++ b/runner/docker-compose/docker-compose-stream-only.yml
@@ -3,50 +3,33 @@ version: "4"
 # Kafka like https://docs.confluent.io/current/installation/docker/docs/installation/single-node-client.html
 services:
   zookeeper:
-    image: "bitnami/zookeeper:latest"
+    image: confluentinc/cp-zookeeper:latest
     hostname: zookeeper
-    networks:
-      - flowing
+    container_name: zookeeper
     ports:
-      - 2181:2181
+      - "32181:32181"
     environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ALLOW_ANONYMOUS_LOGIN: 'yes'
+      ZOOKEEPER_CLIENT_PORT: 32181
+      ALLOW_ANONYMOUS_LOGIN: "yes"
 
   kafka:
-    image: "bitnami/kafka:latest"
+    image: confluentinc/cp-enterprise-kafka:latest
     hostname: kafka
-    networks:
-      - flowing
-    ports:
-      - 9092:9092
-      - 29092:29092
-    environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_PORT: 9092
-      KAFKA_ADVERTISED_HOST_NAME: localhost
-      ALLOW_PLAINTEXT_LISTENER: 'yes'
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_LISTENERS: PLAINTEXT://:9092,PLAINTEXT_HOST://:29092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    container_name: kafka
     depends_on:
       - zookeeper
-
-  reporting:
-    build:
-      context: ../../kafka/java/reporting
-      dockerfile: Dockerfile
-    networks:
-      - flowing
     ports:
-      - "8093:8094"
-      - "5014:5014"
-    depends_on:
-      - kafka
+      - "29092:29092"
+      - "9092:9092"
     environment:
-      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
-      - JAVA_TOOL_OPTIONS="-agentlib:jdwp=transport=dt_socket,address=*:5014,server=y,suspend=n"
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:32181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, PLAINTEXT_HOST://localhost:29092
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
+      ALLOW_PLAINTEXT_LISTENER: "yes"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
 
 networks:
   flowing:
