--- a/kafka/java/bookingProducer/pom.xml
+++ b/kafka/java/bookingProducer/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.flowing.retail</groupId>
-    <artifactId>flowing-retail-kafka-reporting</artifactId>
+    <artifactId>flowing-retail-kafka-bookingProducer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <parent>
@@ -13,7 +13,7 @@
     </parent>
 
     <properties>
-        <sourceDir>${project.basedir}/src/main/java/io/flowing/retail/reporting/Serialization/model/</sourceDir>
+        <sourceDir>${project.basedir}/src/main/java/io/flowing/retail/bookingProducer/Serialization/model/</sourceDir>
     </properties>
     <repositories>
         <repository>
@@ -156,7 +156,7 @@
                                 </goals>
                                 <configuration>
                                     <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
-                                    <outputDirectory>${project.basedir}/src/main/java/io/flowing/retail/reporting/Serialization/model/</outputDirectory>
+                                    <outputDirectory>src/main/java/io/flowing/retail/bookingProducer/model/</outputDirectory>
                                 </configuration>
                             </execution>
                         </executions>
