--- a/kafka/java/bookingProducer/src/main/resources/application.properties
+++ b/kafka/java/bookingProducer/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 # Kafka
 flowing-retail.topic-name=flowing-retail
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=localhost:29092
+bootstrap.servers=localhost:29092
 spring.kafka.consumer.auto-offset-reset=earliest
 logging.file.path=logs
 acks=all
