--- a/kafka/java/reporting/pom.xml
+++ b/kafka/java/reporting/pom.xml
@@ -108,6 +108,11 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin</artifactId>
+            <version>6.1.3</version>
+        </dependency>
 
     </dependencies>
     <build>
