--- a/kafka/java/bookingProducer/pom.xml
+++ b/kafka/java/bookingProducer/pom.xml
@@ -108,6 +108,12 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.1</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <build>
