finish multi stream processing

--- a/kafka/java/bookingProducer/src/main/resources/application.properties
+++ b/kafka/java/bookingProducer/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.kafka.consumer.auto-offset-reset=earliest
 logging.file.path=logs
 acks=all
 retries=0
-key.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
+key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
 log4j.logger.org.apache.kafka=DEBUG
 
