--- a/kafka/java/reporting/pom.xml
+++ b/kafka/java/reporting/pom.xml
@@ -113,6 +113,12 @@
             <artifactId>javalin</artifactId>
             <version>6.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.1</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <build>
